Tracks page completely responsive. Fixed mobile view. Introduced two columns on tablets. Removed text for tab icons in mobile view. Made tab icons responsive

--- a/src/assets/sass/partials/_standards.scss
+++ b/src/assets/sass/partials/_standards.scss
@@ -98,13 +98,13 @@
 	position: relative;
 }
 
-@mixin track_program_inner($vertical,$horizontal)
+@mixin track_program_inner($top, $right, $bottom, $left)
 {
 	position: absolute;
-	top: $vertical;
-	left: $horizontal;
-	bottom: $vertical;
-	right: $horizontal;
+	top: $top;
+	right: $right;
+	bottom: $bottom;
+	left: $left;
 }
 
 .red_and_white_button{
