--- a/src/assets/sass/tab_icons.scss
+++ b/src/assets/sass/tab_icons.scss
@@ -6,9 +6,27 @@
 		color: $red_color;
 	}
 	img {
-		width: 100px;
-		height: 100px;
+		width: 80%;
+		height: auto;
 	}
+/*		@media screen and (max-width: 560px){
+			width: 60px;
+			height: 60px;
+		}
+		@media screen and (max-width: 450px){
+			width: 50px;
+			height: 50px;
+		}
+		@media screen and (max-width: 370px){
+			width: 40px;
+			height: 40px;
+		}
+		@media screen and (max-width: 300px){
+			width: 30px;
+			height: 30px;
+		}	
+*/
+	
 	& .hover {
 		display: none;
 	}
@@ -25,6 +43,21 @@
 	}
 }
 
+.tab_icon{
+	@media screen and (max-width: 767px){
+		padding: 0 8px;
+	}
+	@media screen and (max-width: 480px){
+		padding: 0 4px;
+	}
+
+	.hide1{
+	@media screen and (max-width: 480px){
+		display: none;	
+	}
+}
+
+}
 .first_icon{
 	& .normal{
 		display: none;
@@ -36,3 +69,4 @@
 		color: $black_color;
 	}
 }
+
