--- a/src/assets/sass/track_programs.scss
+++ b/src/assets/sass/track_programs.scss
@@ -6,6 +6,8 @@ $program-container-padding: 148%;
 $img-container-padding: 58.22%;
 $date-container-padding: 13.66%;
 $copy-container-padding: 49.56%;
+$copy-bigger-container-padding: 59.56%;
+$button-bigger-container-padding: 16.56%;
 $button-container-padding: 26.56%;
 $oswald_font: 'Oswald', sans-serif;
 $button_font_size: 16px;
@@ -27,13 +29,13 @@ $merriweather_font: Merriweather, sans-serif;
 		background-color: $white-color;
 
 		.position-track-program-container{
-			@include track_program_inner(0px, 0px);
+			@include track_program_inner(0px, 0px, 0px, 0px);
 
 			.track-program-img-container{
 				@include track_program_outer($img-container-padding);
 			
 				.position-track-program-img-container{
-					@include track_program_inner(5px, 0px);	
+					@include track_program_inner(10px, 0px, 0px, 0px);	
 				
 					.track-program-img{
 						height: 100%;
@@ -49,7 +51,7 @@ $merriweather_font: Merriweather, sans-serif;
 				border-bottom: 1px solid lightgrey;
 			
 				.position-track-program-date-container{
-					@include track_program_inner(14px, 14px);
+					@include track_program_inner(7px, 14px, 7px, 14px);
 					@include font_definition($oswald_font,$button_font_size,$button_font_weight);
 	
 				}
@@ -57,18 +59,31 @@ $merriweather_font: Merriweather, sans-serif;
 
 			.track-program-copy-container{
 				@include track_program_outer($copy-container-padding);
+				@media (max-width: 940px) and (min-width: 768px), (max-width: 580px) and (min-width: 501px), (max-width: 350px)
+				{
+					@include track_program_outer($copy-bigger-container-padding);
+				}
 				border-bottom: 1px solid lightgrey;
 			
 				.position-track-program-copy-container{
-					@include track_program_inner(20px, 20px);
+					@include track_program_inner(20px, 20px, 20px, 20px);
 					h3{
 						padding-top: 0px;
 					}
 					.tracks-program-title{
 						@include font_definition($oswald_font,$title_font_size,$title_font_weight);
+						@media (max-width: 940px) and (min-width: 768px), (max-width: 580px) and (min-width: 501px), (max-width: 350px)
+						{
+							@include font_definition($oswald_font,16px,$title_font_weight);
+						}
 					}
 					.tracks-program-desc{
 						@include font_definition($merriweather_font,$desc_font_size,$desc_font_weight);
+						@media (max-width: 940px) and (min-width: 768px), (max-width: 580px) and (min-width: 501px), (max-width: 350px)
+						{
+							@include font_definition($merriweather_font,11px,$desc_font_weight);
+						}
+
 						padding-top: 10px;
 					}
 				}
@@ -76,10 +91,20 @@ $merriweather_font: Merriweather, sans-serif;
 
 			.track-program-button-container{
 				@include track_program_outer($button-container-padding);
+				@media (max-width: 940px) and (min-width: 768px), (max-width: 580px) and (min-width: 501px), (max-width: 350px)
+				{
+					@include track_program_outer($button-bigger-container-padding);
+				}	
+
 				border-bottom: 1px solid lightgrey;
 			
 				.position-track-program-button-container{
-					@include track_program_inner(20px, 20px);	
+					@include track_program_inner(20px, 20px, 20px, 20px);	
+					@media (max-width: 940px) and (min-width: 768px), (max-width: 580px) and (min-width: 501px), (max-width: 350px)
+					{
+						@include track_program_inner(5px, 20px, 5px, 20px);
+					}	
+
 				
 					.learn-more-button {
 						@include font_definition($oswald_font,$button_font_size,$button_font_weight);
@@ -89,4 +114,27 @@ $merriweather_font: Merriweather, sans-serif;
 			}
 		}
 	}
+}
+.width630{
+	@media screen and (max-width: 767px) and (min-width: 630px){
+		max-width: 630px;
+	}
+}
+
+@media screen and (max-width: 500px){
+	.outer-track-program-container{
+		width: 100%;
+		padding: 10px 80px;
+	}
+}
+@media screen and (max-width: 420px){
+	.outer-track-program-container{
+		padding: 10px 50px;
+	}
+}
+@media screen and (max-width: 330px){
+	.outer-track-program-container{
+		padding: 10px 20px;
+	}
+
 }
